--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -1,3 +1,8 @@
+.section-footer{
+    position: relative;
+    top: 350px;
+}
+
 .footer-contact-text, .div-footer {
     display: flex;
     flex-direction: column;
