--- a/scss/inicio/_inicio.scss
+++ b/scss/inicio/_inicio.scss
@@ -11,6 +11,7 @@ main {
 
 #header-menu {
     position: fixed;
+    z-index: 1;
     width: 100%;
     height: 110px;
     top: 0;
@@ -29,9 +30,9 @@ main {
     font-family: 'News Cycle', sans-serif;
     font-family: 'Newsreader', serif;
     margin-left: 40px;
-    line-height: 80px;
-    
+    line-height: 80px; 
 }
+
 #a-h1:hover {
     color: map-get($colors, "primary");
     transition: 0.5s;
