--- a/scss/biografia/_biografia.scss
+++ b/scss/biografia/_biografia.scss
@@ -1,11 +1,11 @@
 
 .section-bio {
     position: relative;
-    top: 100px;
+    top: 10px;
 }
 
 .about-me {
-    padding: 30px;
+    padding: 5%;
     
 }
 .nav-bio{
@@ -18,19 +18,18 @@
     border-radius: 100% ;
     width: 30%;
     height: 30%;
-    padding-bottom: 40px;
+    padding-bottom: 4%;
 }
 .h2-statement {
-    padding-top: 40px;
-    font-size: 20px;
+    padding-top: 4%;
+    font-size: 150%;
 }
 .text-bio {
     margin-left: 20%;
     margin-right: 20%;
-    padding-top:35px;
+    padding-top:2%;
     text-align: justify;
-    size: 50px;
     color: blanchedalmond;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-    font-size: 15px;
+    font-size: 100%;
 }
