--- a/scss/titulos/_titulos.scss
+++ b/scss/titulos/_titulos.scss
@@ -8,7 +8,7 @@
 
 h2 {
     @include colorblancheadalmond-fonttittle-justcenter;
-    font-size: 40px;
+    font-size: 200%;
     display: flex;
     justify-content: center;
 }
