--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -8,13 +8,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 2%;
 }
 
 .footer-contact-text{
     color: blanchedalmond;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 150%;
 }
 
 .instagram-contact {
