--- a/scss/grillas/_grillas.scss
+++ b/scss/grillas/_grillas.scss
@@ -1,7 +1,7 @@
 /*Seccion Gallery*/
 .section-galeria {
     position: relative;
-    top: 200px;
+    top: 180px;
 }
 .div-galeria{
     display: grid;
@@ -10,7 +10,7 @@
     "a b c" 
     "d e f"
     "g h i";
-    gap: 20px;
+    gap: 2%;
 }
  
 .img-galeria {
@@ -20,13 +20,13 @@
 .h2-galeria {
     display: flex;
    justify-content: center;
-   padding: 5%;
+   padding-bottom: 2%;
 }
 /*Seccion Works a*/
 
 .section-works-a {
         position: relative;
-        top: 250px;
+        top: 300px;
 }
 
 .h3-works-a {
@@ -47,7 +47,7 @@
 
 .section-works-b {
     position: relative;
-    top: 300px;
+    top: 350px;
 }
 
 .h3-works-b {
