--- a/scss/inicio/_inicio.scss
+++ b/scss/inicio/_inicio.scss
@@ -13,7 +13,7 @@ main {
     position: fixed;
     z-index: 1;
     width: 100%;
-    height: 110px;
+    height: 10%;
     top: 0;
     left: 0;
     background-color: map-get($colors, "background-menu");
@@ -29,8 +29,8 @@ main {
 #a-h1{
     font-family: 'News Cycle', sans-serif;
     font-family: 'Newsreader', serif;
-    margin-left: 40px;
-    line-height: 80px; 
+    margin-left: 3%;
+    line-height: 250%; 
 }
 
 #a-h1:hover {
