--- a/scss/responsive/_responsive.scss
+++ b/scss/responsive/_responsive.scss
@@ -133,3 +133,17 @@
     border-radius: 3px;
 }
 }
+@media screen and (max-width: 399px){
+
+    #a-h1{
+        font-size: small;
+        margin-left: 5px;
+
+    }
+    #header-menu {
+        position: fixed;
+        z-index: 1;
+        width: 100%;
+        height: 8%;
+    }
+}
