--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,5 @@
+
+/*Formato General*/
 *{
     margin: 0;
     padding: 0;
@@ -6,3 +8,4 @@
 body {
     background-color: black;
 }
+/*Fin Formato General*/
