--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -1,3 +1,4 @@
+/*Footer*/
 .section-footer{
     position: relative;
     top: 350px;
@@ -29,3 +30,4 @@
     text-decoration: underline;
     cursor: hand;    
 }
+/*Fin de Footer*/
