--- a/scss/grillas/_grillas.scss
+++ b/scss/grillas/_grillas.scss
@@ -1,3 +1,6 @@
+
+/*------Grillas de Imagenes---------*/
+
 /*Seccion Gallery*/
 .section-galeria {
     position: relative;
@@ -23,7 +26,6 @@
    padding-bottom: 2%;
 }
 /*Seccion Works a*/
-
 .section-works-a {
         position: relative;
         top: 300px;
@@ -44,7 +46,6 @@
 }
 
 /*Seccion Works b*/
-
 .section-works-b {
     position: relative;
     top: 350px;
@@ -64,3 +65,4 @@
     width: 400px;
     border-radius: 3px;
 }
+/*------ Fin de Grillas de Imagenes---------*/
