--- a/scss/biografia/_biografia.scss
+++ b/scss/biografia/_biografia.scss
@@ -1,4 +1,5 @@
 
+/*Seccion Biografia*/
 .section-bio {
     position: relative;
     top: 10px;
@@ -33,3 +34,4 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     font-size: 100%;
 }
+/*Fin Seccion Biografia*/
