--- a/scss/contacto/_contacto.scss
+++ b/scss/contacto/_contacto.scss
@@ -1,3 +1,5 @@
+
+/*Formulario de Contacto*/
 .header-contact {
     padding: 0%;}
 
@@ -76,3 +78,4 @@ textarea{
 
     background-color: black;
 }
+/*Fin de Formulario de Contacto*/
