--- a/scss/inicio/_inicio.scss
+++ b/scss/inicio/_inicio.scss
@@ -5,6 +5,8 @@ $colors: (
 "background": black,
 );
 
+/*Seccion de Inicio*/
+
 main {
     background-color: map-get($colors, "background");
 }
@@ -50,3 +52,4 @@ main {
     width: 100%;
     height: 100%;
 }
+/*Fin de la Seccion de Inicio*/
