--- a/scss/responsive/_responsive.scss
+++ b/scss/responsive/_responsive.scss
@@ -13,8 +13,11 @@
         border-radius: 3px;
     }
 
+    form {
+     min-width: 40%;
+    }
+ 
     /*Seccion Works a*/
-
     .div-works-a{
     display: grid;
     justify-content: center;
@@ -147,3 +150,4 @@
         height: 8%;
     }
 }
+/*-------Fin Full Responsive--------*/
