--- a/scss/contacto/_contacto.scss
+++ b/scss/contacto/_contacto.scss
@@ -59,7 +59,7 @@ textarea{
 }
 .botonera {
     padding: 2%;
-    border-radius: 5px;
+    border-radius: 5%;
 }
 .botonera:hover {
     cursor: pointer;
