--- a/scss/inicio/_inicio.scss
+++ b/scss/inicio/_inicio.scss
@@ -23,7 +23,7 @@ main {
 
 .nav-link:hover {
     background-color: map-get($colors, "secundary");
-    border-radius: 5px;
+    border-radius: 2%;
     transition: 0.5s;
 }
 
