--- a/scss/responsive/_responsive.scss
+++ b/scss/responsive/_responsive.scss
@@ -76,7 +76,12 @@
         "a" "b" "c" "d" "e" "f" "g" "h" "i";
     }
     .img-galeria {
-        width: 32vw;
+        width: 80vw;
+    }
+
+    .section-galeria {
+        position: relative;
+        top: 15vh;
     }
 
     /*Seccion Works a*/
@@ -88,7 +93,12 @@
     "a" "b" "c" "d" "e" "f";
 }
     .img-works-a {
-    width: 32vw;
+    width: 80vw;
+}
+
+.section-works-a {
+    position: relative;
+    top: 75vh;
 }
 
 /*Seccion Works b*/
@@ -100,7 +110,15 @@
     "a" "b" "c" "d" "e" "f";
 }
     .img-works-b {
-    width: 32vw;
+    width: 80vw;
+}
+.section-works-b {
+    position: relative;
+    top: 95vh;
+}
+.section-footer{
+    position: relative;
+    top: 125vh;
 }
 }
 @media screen and (max-width: 376px){
@@ -110,24 +128,6 @@
         background-color: rgba(0, 0, 0, 0.493);
     }
 
-}
-@media screen and (max-width: 399px){
-
-    .img-galeria {
-        width: 32vw;
-    }
-
-    /*Seccion Works a*/
-
-    .img-works-a {
-    width: 32vw;
-}
-
-    /*Seccion Works b*/
-
-    .img-works-b {
-    width: 32vw;
-    }
 }
 
 @media screen and (max-width: 399px){
