--- a/scss/responsive/_responsive.scss
+++ b/scss/responsive/_responsive.scss
@@ -54,16 +54,26 @@
 }
 @media screen and (max-width: 991px){
 
+    #a-h1{
+        font-size:large;
+        margin-left: 25%;
+        margin-right: 75%;
+    }
     .nav-item {
-        margin-left: 15%;
-        margin-top: 2%;
+        padding: 5%;
     }
 
-    .navbar-nav{
-        margin-top: 0%;
-        max-width: 15%;
-        max-height: 10%;
-        background-color: rgba(0, 0, 0, 0.493);
+    #ul-menu{
+        margin-top: 2%;
+        width: 80px;
+        max-height: 0%;
+        background-color: rgba(0, 0, 0, 0.493),;
+    }
+
+    .navbar-toggler {
+    position: absolute;
+    top: 5%;
+    
     }
 }
 
@@ -133,8 +143,9 @@
 @media screen and (max-width: 399px){
 
     #a-h1{
-        font-size: small;
-        margin-left: 2%;
+        font-size: medium;
+        margin-left: 25%;
+        margin-right: 75%;
 
     }
     #header-menu {
@@ -145,8 +156,12 @@
     }
     
     .navbar-nav{
-        margin-top: 2%;
+        margin-top: 5%;
         max-width: 20%;
+    }
+
+    #ul-menu{
+        width: 80px;
     }
 }
 /*-------Fin Full Responsive--------*/
