--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,8 @@ h3 {
 @media screen and (max-width: 991px) {
   #a-h1 {
     font-size: large;
-    margin-left: 25%;
-    margin-right: 75%;
+    margin-left: 30%;
+    margin-right: 60%;
   }
 
   .nav-item {
@@ -330,6 +330,12 @@ h3 {
   .section-footer {
     position: relative;
     top: 125vh;
+  }
+}
+@media screen and (max-width: 543px) {
+  #a-h1 {
+    margin-left: 25%;
+    margin-right: 75%;
   }
 }
 @media screen and (max-width: 376px) {
