--- a/scss/responsive/_responsive.scss
+++ b/scss/responsive/_responsive.scss
@@ -56,8 +56,8 @@
 
     #a-h1{
         font-size:large;
-        margin-left: 25%;
-        margin-right: 75%;
+        margin-left: 30%;
+        margin-right: 60%;
     }
     .nav-item {
         padding: 5%;
@@ -130,6 +130,14 @@
     position: relative;
     top: 125vh;
 }
+}
+
+@media screen and (max-width: 543px){
+
+    #a-h1{
+        margin-left: 25%;
+        margin-right: 75%;
+    }
 }
 @media screen and (max-width: 376px){
 
